--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
+body {
+    background-color: rgb(39, 214, 205);
+}
+
 .App {
-  text-align: center;
+    margin: 200px;
+    padding: 60px;
+    max-width: 50%;
+    background-color: cadetblue;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+    color: rgb(143, 0, 0);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#top{ 
+    display: flex;
+    justify-content: center;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#addBtn {
+    background-color: burlywood;
+    width: 80px;
+    height: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+#list {
+    margin: 3px;
+    height: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: larger;
+    background-color: aqua;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#doneBtn {
+    height: 100%;
+    width: auto;
+    background-color: rgb(16, 245, 92);
+    color: rgb(24, 24, 24);    
+}
+
+.done{
+    text-decoration: line-through;
+    background-color: rgb(29, 188, 194);
+}
+
+#delBtn {
+    height: 100%;
+    width: auto;
+    background-color: crimson;
+    color: rgb(24, 24, 24);
 }
